--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "license": "ISC",
   "scripts": {
-    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "compile:circuits": "./scripts/compile_circuits.sh"
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.31.0"
@@ -12,6 +11,8 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
+    "circomlib": "^2.0.5",
+    "ffjavascript": "^0.3.1",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
