--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "license": "ISC",
   "scripts": {
-    "compile:circuits": "./scripts/compile_circuits.sh"
+    "circuits:build": "./scripts/build_circuits.sh"
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.31.0"
