--- a/programs/hush/Cargo.toml
+++ b/programs/hush/Cargo.toml
@@ -18,3 +18,6 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.31.0"
+ark-bn254 = "0.5.0"
+ark-serialize = "0.5.0"
+groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana" }
