--- a/programs/hush/Cargo.toml
+++ b/programs/hush/Cargo.toml
@@ -20,4 +20,5 @@ idl-build = ["anchor-lang/idl-build"]
 anchor-lang = "0.31.0"
 ark-bn254 = "0.5.0"
 ark-serialize = "0.5.0"
-groth16-solana = { git = "https://github.com/Lightprotocol/groth16-solana" }
+groth16-solana = "0.0.3"
+light-poseidon = "0.3.0"
