--- a/programs/hush/Cargo.toml
+++ b/programs/hush/Cargo.toml
@@ -21,4 +21,4 @@ anchor-lang = "0.31.0"
 ark-bn254 = "0.5.0"
 ark-serialize = "0.5.0"
 groth16-solana = "0.0.3"
-light-poseidon = "0.3.0"
+solana-poseidon = "2.2.3"
