--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.31.0",
-    "@solana/web3.js": "^1.98.0"
+    "@solana/web3.js": "^1.98.0",
+    "circomlibjs": "^0.1.7",
+    "snarkjs": "^0.7.5"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
+    "@types/circomlibjs": "^0.1.6",
     "@types/mocha": "^9.0.0",
+    "@types/node": "^22.13.13",
+    "@types/snarkjs": "^0.7.9",
     "chai": "^4.3.4",
     "circomlib": "^2.0.5",
     "ffjavascript": "^0.3.1",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.3.5"
   }
 }
