--- a/programs/hush/Cargo.toml
+++ b/programs/hush/Cargo.toml
@@ -22,3 +22,4 @@ ark-bn254 = "0.5.0"
 ark-serialize = "0.5.0"
 groth16-solana = "0.0.3"
 solana-poseidon = "2.2.3"
+hex = { version = "0.4", default-features = false }
