--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.26",
+    "@solana/wallet-adapter-react": "^0.15.38",
+    "@solana/wallet-adapter-react-ui": "^0.9.38",
+    "@solana/web3.js": "^1.98.1",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
