--- a/ui/package.json
+++ b/ui/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "0.31.0",
     "@solana/wallet-adapter-base": "^0.9.26",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/web3.js": "^1.98.1",
+    "circomlibjs": "^0.1.7",
+    "ffjavascript": "^0.3.1",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "snarkjs": "^0.7.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
