--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "snarkjs": "^0.7.5"
   },
   "devDependencies": {
