--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/web3.js": "^1.98.1",
     "circomlibjs": "^0.1.7",
+    "dayjs": "^1.11.13",
     "ffjavascript": "^0.3.1",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
