--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@coral-xyz/anchor": "0.31.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.7.0",
     "@solana/wallet-adapter-base": "^0.9.26",
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
