--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/web3.js": "^1.98.1",
+    "@vercel/analytics": "^1.5.0",
     "circomlibjs": "^0.1.7",
     "dayjs": "^1.11.13",
     "ffjavascript": "^0.3.1",
